about section added

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,4 +1,13 @@
-//break points
-$bp-small: 31.25em; // 500px
-$bp-medium: 50em; // 800px
-$bp-large: 68.75em; // 1100px
+
+$color-white: #FFFFFF;
+$color-black: #000000;
+$color-blue: #0b2fcf;
+
+$fs-title-large: 4.2em;
+$fs-title: 3.2em;
+$fs-subtitle: 2.4em;
+$fs-main: 1.6em;
+
+$bp-small: 31.25em;
+$bp-medium: 50em;
+$bp-large: 68.75em;
