--- a/src/sections/AboutUs/AboutUs.module.scss
+++ b/src/sections/AboutUs/AboutUs.module.scss
@@ -17,8 +17,7 @@
   color: $color-white;
 
   h5 {
-    font-size: $fs-title-large;
-    opacity: 0.4;
+    @include title;
     margin-bottom: 1em;
   }
 
@@ -60,7 +59,7 @@
     }
     img {
       @include img;
-      max-height: 25em;
+      height: 25em;
       width: 100%;
     }
     &__title {
