--- a/src/components/CallBackForm/CallBackForm.module.scss
+++ b/src/components/CallBackForm/CallBackForm.module.scss
@@ -3,15 +3,25 @@
 
 .form {
   &__container {
-    background: transparent; 
+    background: transparent;
   }
   display: flex;
   flex-direction: column;
   align-items: stretch;
   width: 70%;
+  @media screen and (min-width: $bp-medium) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: bottom;
+    width: 100%;
+  }
 
-  &__inputsContainer {
+  &__input {
     position: relative;
+    @media screen and (min-width: $bp-medium) {
+      width: 30%;
+      display: flex;
+    }
   }
   input {
     color: $color-black;
@@ -23,6 +33,9 @@
     border-bottom: 1px solid $color-black;
     background: transparent;
     width: 100%;
+    @media screen and (min-width: $bp-medium) {
+      margin-bottom: 0;
+    }
   }
 
   button {
@@ -32,11 +45,14 @@
     font-size: $fs-main;
     text-align: center;
     padding: 1em 0;
+    @media screen and (min-width: $bp-medium) {
+      width: 30%;
+    }
   }
   span {
     position: absolute;
     top: 0;
     right: 0;
-    color: #FF0000;
+    color: #ff0000;
   }
 }
