--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,19 +3,34 @@
 
 .header {
   // @include container;
+  max-width: 120em;
+  margin: 0 auto;
   position: relative;
   padding-top: 2em;
+  @media screen and (min-width: $bp-large) {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   &__logo {
     background-color: #fff;
     width: 30%;
     height: 5em;
     margin-left: 3em;
+    @media screen and (min-width: $bp-large) {
+      width: 20%;
+      margin-right: 7em;
+    }
   }
 
   &_nav {
     margin-top: 1em;
     background: rgba(255, 255, 255, 0.2);
+    @media screen and (min-width: $bp-large) {
+      background: transparent;
+    }
   }
 
   &_list {
@@ -23,22 +38,37 @@
     flex-direction: column;
     align-items: center;
 
-    @media only screen and (max-width: $bp-small) {
+    @media only screen and (max-width: $bp-large) {
       transition: max-height 0.5s ease-out;
       overflow: hidden;
       max-height: 0;
+    }
+    @media screen and (min-width: $bp-large) {
+      flex-direction: row;
+      align-items: stretch;
     }
 
     &_item {
       padding: 1.5em 0;
       width: 100%;
       text-align: center;
-
+      @media screen and (min-width: $bp-large) {
+        vertical-align: middle;
+        display: flex;
+        align-items: center;
+      }
+    
       &:first-child {
         margin-top: 1em;
+        @media screen and (min-width: $bp-large) {
+          margin-top: 0;
+        }
       }
       &:last-child {
         margin-bottom: 1em;
+        @media screen and (min-width: $bp-large) {
+          margin-bottom: 0;
+        }
       }
       &:hover {
         background: rgba(255, 255, 255, 0.3);
@@ -56,7 +86,13 @@
   display: none;
 }
 
-@media only screen and (max-width: $bp-small) {
+@media screen and (min-width: $bp-large) {
+  .hamburgerLines {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: $bp-large) {
   .hamburgerLines {
     display: block;
     height: 26px;
@@ -113,5 +149,10 @@
 
   .header input[type="checkbox"]:checked ~ .hamburgerLines .line3 {
     transform: rotate(-45deg);
+  }
+}
+
+@media only screen and (max-width: $bp-large) {
+  .header {
   }
 }
