--- a/src/sections/Learning/Learning.module.scss
+++ b/src/sections/Learning/Learning.module.scss
@@ -13,7 +13,7 @@
 
   &__title {
     @include title;
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
   }
 
   &__description {
@@ -23,25 +23,44 @@
   &__itemsContainer {
     margin-top: 5em;
     list-style: none;
+
+    @media screen and (min-width: $bp-medium) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 4em;
+    }
   }
 
   &__item {
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (min-width: $bp-medium) {
+      flex-direction: row;
+    }
 
     &__img {
-      height: 15em;
+      height: 25em;
       background-color: #fff;
+      object-fit: cover;
       width: 100%;
+      @media screen and (min-width: $bp-medium) {
+        height: 20em;
+        width: 40%;
+      }
     }
 
     &__textContainer {
       background: url(../../img/offers-grey-bg.png);
       height: 15em;
+
       display: flex;
       align-items: center;
       width: 100%;
+      @media screen and (min-width: $bp-medium) {
+        height: 20em;
+        width: 60%;
+      }
     }
 
     &__text {
@@ -54,5 +73,8 @@
   }
   &__item:not(:last-child) {
     margin-bottom: 3.5em;
+    @media screen and (min-width: $bp-medium) {
+      margin-bottom: 0;
+    }
   }
 }
