change some text

--- a/src/sections/AboutUs/AboutUs.module.scss
+++ b/src/sections/AboutUs/AboutUs.module.scss
@@ -21,6 +21,10 @@
     margin-bottom: 1em;
   }
 
+  p {
+    font-size: $fs-subtitle;
+  }
+
   &__top {
     padding-top: 3em;
     padding-bottom: 3em;
