added masters section, fix some styles & menu display

--- a/src/sections/Main/Main.module.scss
+++ b/src/sections/Main/Main.module.scss
@@ -5,6 +5,7 @@
   &__title {
     font-size: $fs-title;
     color: $color-white;
+    line-height: 1.5em;
     &__bg {
       padding: 2em 0;
       background: $color-blue;
