--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,13 +15,61 @@
   }
 
   &__logo {
-    background-color: #fff;
-    width: 30%;
-    height: 5em;
+    width: 12em;
     margin-left: 3em;
     @media screen and (min-width: $bp-large) {
-      width: 20%;
       margin-right: 7em;
+    }
+    img {
+      display: block;
+      width: 100%;
+      @media only screen and (max-width: 360px) {
+        width: 90%;
+      }
+    }
+  }
+
+  &__contacts {
+    color: $color-white;
+    position: absolute;
+    top: 3em;
+    left: 50%;
+    transform: translateX(-50%);
+
+    @media only screen and (max-width: 430px) {
+      top: 3.2em;
+      left: 55%;
+    }
+    @media only screen and (max-width: 360px) {
+      top: 3.3em;
+      left: 58%;
+    }
+
+    p,
+    a {
+      font-size: $fs-main;
+      text-align: center;
+      white-space: nowrap;
+
+      @media only screen and (max-width: 430px) {
+        font-size: 1.4em;
+      }
+      @media only screen and (max-width: 360px) {
+        font-size: 1.3em;
+      }
+    }
+    a {
+      display: block;
+      margin-bottom: 1.4em;
+      color: $color-white;
+      text-decoration: none;
+      
+      @media only screen and (max-width: 430px) {
+        margin-bottom: 1.6em;
+      }
+      @media only screen and (max-width: 360px) {
+        margin-bottom: 1.4em;
+      }
     }
   }
 
@@ -57,7 +105,7 @@
         display: flex;
         align-items: center;
       }
-    
+
       &:first-child {
         margin-top: 1em;
         @media screen and (min-width: $bp-large) {
@@ -98,7 +146,7 @@
     height: 26px;
     width: 32px;
     position: absolute;
-    top: 3rem;
+    top: 3.5rem;
     right: 3rem;
     z-index: 5;
     display: flex;
@@ -128,10 +176,11 @@
     display: block;
     height: 32px;
     width: 32px;
-    top: 3rem;
+    top: 3.5rem;
     right: 3rem;
     z-index: 6;
     opacity: 0;
+    margin: 0;
     cursor: pointer;
   }
   .header input[type="checkbox"]:checked ~ .header_nav .header_list {
