--- a/src/sections/AboutUs/AboutUs.module.scss
+++ b/src/sections/AboutUs/AboutUs.module.scss
@@ -5,15 +5,6 @@
   &__container {
     @include container;
   }
-  // background: linear-gradient(
-  //     90deg,
-  //     rgba(0, 0, 0, 0.5) 0%,
-  //     rgba(0, 0, 0, 0.6) 65%,
-  //     rgba(0, 0, 0, 1) 100%
-  //   ),
-  //   url(../../img/aboutUs/about-us-bg.jpg) center center/contain no-repeat;
-  // background-attachment: fixed;
-
   color: $color-white;
 
   h5 {
@@ -23,6 +14,7 @@
 
   p {
     font-size: $fs-subtitle;
+    line-height: 1.5em;
   }
 
   &__top {
