some fixes with display

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,31 +1,66 @@
 @import "../../style/variables";
 @import "../../style/mixins";
 
+@font-face {
+  font-family: "Web Serveroff";
+  src: url(../../font/Web_Serveroff.otf);
+}
+
 .header {
-  // @include container;
   max-width: 120em;
   margin: 0 auto;
-  position: relative;
   padding-top: 2em;
-  @media screen and (min-width: $bp-large) {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-  }
+  min-height: 12em;
+
+  position: fixed;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #000;
+  z-index: 9;
+
+  // @media screen and (min-width: $bp-large) {
+  //   display: flex;
+  //   width: 100%;
+  //   justify-content: space-between;
+  //   align-items: center;
+  // }
 
   &__logo {
-    width: 12em;
+    display: block;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+
+    width: 8em;
+    height: 8em;
     margin-left: 3em;
+    // border: 1px solid $color-white;
+    // padding: 0.5em;
+
+    // font-family: "Web Serveroff";
+    // color: $color-white;
+    // text-transform: uppercase;
+    // text-align: center;
     @media screen and (min-width: $bp-large) {
       margin-right: 7em;
     }
+
+    // &__top {
+    //   font-size: 20px;
+    //   letter-spacing: 5px;
+    //   width: 100%;
+    // }
+    // &__bottom {
+    //   font-size: 12px;
+    //   letter-spacing: 6px;
+    // }
     img {
       display: block;
-      width: 100%;
-      @media only screen and (max-width: 360px) {
-        width: 90%;
-      }
+      max-width: 100%;
+      filter: invert(1);
     }
   }
 
@@ -36,14 +71,15 @@
     left: 50%;
     transform: translateX(-50%);
 
-    @media only screen and (max-width: 430px) {
-      top: 3.2em;
-      left: 55%;
-    }
+    // @media only screen and (max-width: 430px) {
+    //   top: 3.2em;
+    // }
     @media only screen and (max-width: 360px) {
-      top: 3.3em;
-      left: 58%;
+      top: 2.7em;
     }
+    // @media only screen and (min-width: $bp-large) {
+    //   display: none;
+    // }
 
     p,
     a {
@@ -54,31 +90,31 @@
       @media only screen and (max-width: 430px) {
         font-size: 1.4em;
       }
-      @media only screen and (max-width: 360px) {
-        font-size: 1.3em;
-      }
+      // @media only screen and (max-width: 360px) {
+      //   font-size: 1.3em;
+      // }
     }
     a {
       display: block;
       margin-bottom: 1.4em;
       color: $color-white;
       text-decoration: none;
-      
-      @media only screen and (max-width: 430px) {
-        margin-bottom: 1.6em;
-      }
-      @media only screen and (max-width: 360px) {
-        margin-bottom: 1.4em;
-      }
+
+      // @media only screen and (max-width: 430px) {
+      //   margin-bottom: 1.6em;
+      // }
+      // @media only screen and (max-width: 360px) {
+      //   margin-bottom: 1.4em;
+      // }
     }
   }
 
   &_nav {
     margin-top: 1em;
     background: rgba(255, 255, 255, 0.2);
-    @media screen and (min-width: $bp-large) {
-      background: transparent;
-    }
+    // @media screen and (min-width: $bp-large) {
+    //   background: transparent;
+    // }
   }
 
   &_list {
@@ -86,37 +122,37 @@
     flex-direction: column;
     align-items: center;
 
-    @media only screen and (max-width: $bp-large) {
+    // @media only screen and (max-width: $bp-large) {
       transition: max-height 0.5s ease-out;
       overflow: hidden;
       max-height: 0;
-    }
-    @media screen and (min-width: $bp-large) {
-      flex-direction: row;
-      align-items: stretch;
-    }
+    // }
+    // @media screen and (min-width: $bp-large) {
+    //   flex-direction: row;
+    //   align-items: stretch;
+    // }
 
     &_item {
       padding: 1.5em 0;
       width: 100%;
       text-align: center;
-      @media screen and (min-width: $bp-large) {
-        vertical-align: middle;
-        display: flex;
-        align-items: center;
-      }
+      // @media screen and (min-width: $bp-large) {
+      //   vertical-align: middle;
+      //   display: flex;
+      //   align-items: center;
+      // }
 
       &:first-child {
         margin-top: 1em;
-        @media screen and (min-width: $bp-large) {
-          margin-top: 0;
-        }
+        // @media screen and (min-width: $bp-large) {
+        //   margin-top: 0;
+        // }
       }
       &:last-child {
         margin-bottom: 1em;
-        @media screen and (min-width: $bp-large) {
-          margin-bottom: 0;
-        }
+        // @media screen and (min-width: $bp-large) {
+        //   margin-bottom: 0;
+        // }
       }
       &:hover {
         background: rgba(255, 255, 255, 0.3);
@@ -124,6 +160,7 @@
       a {
         color: $color-white;
         font-size: $fs-subtitle;
+        display: block;
         width: 100%;
       }
     }
@@ -134,17 +171,17 @@
   display: none;
 }
 
-@media screen and (min-width: $bp-large) {
-  .hamburgerLines {
-    display: none;
-  }
-}
+// @media screen and (min-width: $bp-large) {
+//   .hamburgerLines {
+//     display: none;
+//   }
+// }
 
-@media only screen and (max-width: $bp-large) {
+// @media only screen and (max-width: $bp-large) {
   .hamburgerLines {
     display: block;
-    height: 26px;
-    width: 32px;
+    height: 38px;
+    width: 50px;
     position: absolute;
     top: 3.5rem;
     right: 3rem;
@@ -174,8 +211,8 @@
   .checkbox {
     position: absolute;
     display: block;
-    height: 32px;
-    width: 32px;
+    height: 50px;
+    width: 50px;
     top: 3.5rem;
     right: 3rem;
     z-index: 6;
@@ -199,7 +236,7 @@
   .header input[type="checkbox"]:checked ~ .hamburgerLines .line3 {
     transform: rotate(-45deg);
   }
-}
+// }
 
 @media only screen and (max-width: $bp-large) {
   .header {
