--- a/src/sections/Masters/Masters.module.scss
+++ b/src/sections/Masters/Masters.module.scss
@@ -3,7 +3,8 @@
 
 .masters {
   color: $color-white;
-  // place bg image
+  
+  scroll-margin-top: 12em;
 
   &__container {
     @include container;
