--- a/src/components/CallBackForm/CallBackForm.module.scss
+++ b/src/components/CallBackForm/CallBackForm.module.scss
@@ -31,6 +31,7 @@
     outline: none;
     border: none;
     border-bottom: 1px solid $color-black;
+    border-radius: 0;
     background: transparent;
     width: 100%;
     @media screen and (min-width: $bp-medium) {
